Test text overflow fix

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -25,7 +25,7 @@ body{
     left: 0;
     right: 0;
     left: 0;
-    width: 60%;
+    width: 100%;
     height: 100%;
     /* padding: .1%; */
     background-color: green;
@@ -47,10 +47,10 @@ body{
     margin-right: 1%;
     font-size: 2.4em;
     overflow: hidden;
-    white-space: nowrap;
+    /* white-space: nowrap; */
     width: 80%;
-    height: 80%;
-    max-height: 100%;
-    margin: auto;
+    /* height: 80%; */
+    max-height: 4rem;
+    margin: center;
     /* position: absolute; */
 }
